LA-21: fix delete button icon

--- a/internal/httpapi/templates/dashboard.tmpl
+++ b/internal/httpapi/templates/dashboard.tmpl
@@ -53,7 +53,7 @@
                   <span>Sites</span>
                   <div class="d-flex align-items-center gap-2">
                     <button id="{{.DeleteSiteButtonID}}" type="button" class="{{.DeleteSiteButtonDisabledClass}}" aria-label="{{.DeleteSiteButtonLabel}}" disabled>
-                      <i class="bi bi-trash"></i>
+                      <i class="{{.DeleteSiteIconClass}}" aria-hidden="true"></i>
                     </button>
                     <button id="{{.NewSiteButtonID}}" type="button" class="{{.NewSiteButtonClass}}">{{.NewSiteButtonLabel}}</button>
                   </div>
