--- a/internal/httpapi/templates/dashboard.tmpl
+++ b/internal/httpapi/templates/dashboard.tmpl
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{.PageTitle}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" integrity="sha384-b0OvQu3P5AnbcW2CYwiVdc+GqOR/mdrIW6DCeU44yWiNys8lm2SleqU9jwOpcPfq" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" {{.BootstrapIconsIntegrityAttr}} crossorigin="anonymous" />
+    <link rel="icon" type="image/svg+xml" href="{{.FaviconDataURI}}" />
   </head>
   <body class="d-flex flex-column min-vh-100 bg-light">
     <header class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow-sm">
